# ArduinoTrace

./: ArduinoTrace.h  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  keywords.txt  library.json  library.properties
.github/: FUNDING.yml
.github/workflows/: ci.yml  lock.yml
examples/BasicTracing/: BasicTracing.ino
examples/TraceFromGlobalScope/: TraceFromGlobalScope.ino
extras/test/: Arduino.h  CMakeLists.txt  myassert.h  test_alternative_serial.cpp  test_defaults.cpp  test_disabled.cpp  test_full_path.cpp
test/: CMakeLists.txt  test.cpp  test_alternative_serial.cpp  test_defaults.cpp  test_disabled.cpp  test_full_path.cpp
